2011-01-16	Stephan Linz <linz@li-pro.net>

	* platform: upgrade to u-boot-2010.12

2011-01-12	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-SP3ADSP1800-MMU-full-12.3
