@@ -1,8 +1,8 @@
 #
 # Automatically generated make config: don't edit
-# ptxdist version: 2010.08.0
+# PTXdist 2011.05.0
 #
-PTXCONF_PLATFORMCONFIG_VERSION="2010.08.0"
+PTXCONF_PLATFORMCONFIG_VERSION="2011.05.0"
 PTXCONF__platformconfig_MAGIC__=y
 
 #
@@ -17,7 +17,7 @@ PTXCONF__platformconfig_MAGIC__=y
 # ------------------------------------
 #
 PTXCONF_PLATFORM="Xilinx-SP3ADSP1800-MMU-full-12.3"
-PTXCONF_PLATFORM_VERSION="2011.01"
+PTXCONF_PLATFORM_VERSION="2011.05"
 
 #
 # architecture                  
@@ -36,9 +36,9 @@ PTXCONF_ARCH_MICROBLAZE=y
 # PTXCONF_ARCH_CRIS is not set
 # PTXCONF_ARCH_PARISC is not set
 # PTXCONF_ARCH_SH is not set
+# PTXCONF_ARCH_Z80 is not set
 PTXCONF_ARCH_SUPPORTS_ENDIAN_BIG=y
 PTXCONF_ENDIAN_BIG=y
-# PTXCONF_ENDIAN_LITTLE is not set
 PTXCONF_HAS_HARDFLOAT=y
 PTXCONF_HAS_MMU=y
 PTXCONF_SIZEOF_LONG_DOUBLE="8"
@@ -52,11 +52,6 @@ PTXCONF_ARCH_MICROBLAZE_HAVE_XLBSP=y
 #
 # SoftCPU features
 #
-
-#
-# Project name
-#
-PTXCONF_PROJECT_NAME="Xilinx-SP3ADSP1800-MMU-full-12.3"
 
 #
 # Microblaze is microblaze_0
@@ -76,108 +71,6 @@ PTXCONF_XILINX_MICROBLAZE0_HW_VER="8.00.a"
 PTXCONF_KERNEL_BASE_ADDR=0x20000000
 
 #
-# ------------------------------------
-#
-
-#
-# Xilinx BSP Configuration
-#
-
-#
-# ------------------------------------
-#
-
-#
-# 
-#
-
-#
-# Do you missing configuration?
-#
-
-#
-# 
-#
-
-#
-# You need the file 'Kconfig.auto'
-#
-
-#
-# from your Xilinx BSP directory.
-#
-
-#
-# 
-#
-
-#
-# Copy this file into the Xilinx BSP
-#
-
-#
-# configuration path, normaly at:
-#
-
-#
-# '${PTXDIST_WORKSPACE}/xlbsp' or
-#
-
-#
-# '${PTXDIST_PLATFORMCONFIGDIR}/xlbsp'.
-#
-
-#
-# 
-#
-
-#
-# HINT: In some cases, the 'SECTION'
-#
-
-#
-# comment in Kconfig.auto is missing.
-#
-
-#
-# This leads to the same error. If so
-#
-
-#
-# adding the comment line below at the
-#
-
-#
-# beginning of the file:
-#
-
-#
-# 
-#
-
-#
-# ## SECTION=xlbsp_softcpu
-#
-
-#
-# 
-#
-
-#
-# ------------------------------------
-#
-
-#
-# Bootstrapping features
-#
-PTXCONF_ARCH_MICROBLAZE_FSBLOB=y
-PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR="0xaff80000"
-PTXCONF_ARCH_MICROBLAZE_FSBLOB_U_BOOT=y
-PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR_U_BOOT="0xaff80000"
-PTXCONF_ARCH_MICROBLAZE_FSBLOB_KERNEL=y
-PTXCONF_ARCH_MICROBLAZE_FSBLOB_ADDR_KERNEL="0xaff80000"
-
-#
 # paths & directories           
 #
 PTXCONF_SYSROOT_TARGET="${PTXDIST_PLATFORMDIR}/sysroot-target"
@@ -187,7 +80,7 @@ PTXCONF_SYSROOT_CROSS="${PTXDIST_PLATFORMDIR}/sysroot-cross"
 #
 # toolchain                     
 #
-PTXCONF_CROSSCHAIN_VENDOR="Xilinx MicroBlaze Tools v1.0 (20090928.125627)"
+PTXCONF_CROSSCHAIN_VENDOR="PetaLogix MicroBlaze Tools v2.0 (20110406.101551)"
 PTXCONF_CROSSCHAIN_CHECK="4.1.2"
 PTXCONF_LIBC_GLIBC=y
 # PTXCONF_LIBC_UCLIBC is not set
@@ -219,7 +112,7 @@ PTXCONF_KERNEL_ARCH_STRING="microblaze"
 # PTXCONF_KERNEL_IMAGE_RAW is not set
 PTXCONF_KERNEL_IMAGE_SIMPLE=y
 PTXCONF_KERNEL_IMAGE_SIMPLE_TARGET="sp3adsp1800"
-PTXCONF_KERNEL_IMAGE_SIMPLE_DTS="${PTXDIST_PLATFORMCONFIGDIR}/xlbsp/xilinx.dts"
+PTXCONF_KERNEL_IMAGE_SIMPLE_DTS="${PTXDIST_PLATFORMCONFIGDIR}/platforms/xlbsp/xilinx.dts"
 PTXCONF_KERNEL_IMAGE="simpleImage.${PTXCONF_KERNEL_IMAGE_SIMPLE_TARGET}"
 # PTXCONF_KERNEL_XZ is not set
 # PTXCONF_KERNEL_LZOP is not set
@@ -240,7 +133,7 @@ PTXCONF_HOST_DTC=y
 PTXCONF_HOST_DTC_VERSION="1.1.0"
 PTXCONF_DTC=y
 # PTXCONF_DTC_INSTALL_OFTREE is not set
-PTXCONF_DTC_OFTREE_DTS="${PTXDIST_PLATFORMCONFIGDIR}/xlbsp/xilinx.dts"
+PTXCONF_DTC_OFTREE_DTS="${PTXDIST_PLATFORMCONFIGDIR}/platforms/xlbsp/xilinx.dts"
 PTXCONF_DTC_EXTRA_ARGS=""
 
 #
@@ -289,20 +182,35 @@ PTXCONF_IMAGE_EXT2_GZIP=y
 #
 PTXCONF_IMAGE_IPKG_PUSH_TO_REPOSITORY=y
 PTXCONF_IMAGE_IPKG_FORCED_PUSH=y
-# PTXCONF_IMAGE_IPKG_INDEX is not set
+PTXCONF_IMAGE_IPKG_INDEX=y
 PTXCONF_IMAGE_IPKG_EXTRA_ARGS=""
-# PTXCONF_IMAGE_JFFS2 is not set
+PTXCONF_IMAGE_JFFS2=y
+PTXCONF_IMAGE_JFFS2_BLOCKSIZE=0x20000
+
+#
+# *** add '-n' here for NAND flash ***
+#
+PTXCONF_IMAGE_JFFS2_EXTRA_ARGS="--big-endian"
+# PTXCONF_IMAGE_JFFS2_SUM is not set
 PTXCONF_IMAGE_KERNEL=y
 PTXCONF_IMAGE_KERNEL_INITRAMFS=y
 # PTXCONF_IMAGE_KERNEL_INSTALL_EARLY is not set
 PTXCONF_IMAGE_KERNEL_INSTALL_LATE=y
-# PTXCONF_IMAGE_SQUASHFS is not set
+# PTXCONF_IMAGE_KERNEL_LZOP is not set
+PTXCONF_IMAGE_SQUASHFS=y
+# PTXCONF_HOST_SQUASHFS_TOOLS_V3X is not set
+PTXCONF_HOST_SQUASHFS_TOOLS_V4X=y
+PTXCONF_IMAGE_SQUASHFS_BLOCK_SIZE="${PTXCONF_FLASH_BLOCKSIZE}"
+PTXCONF_IMAGE_SQUASHFS_EXTRA_ARGS=""
 PTXCONF_IMAGE_TGZ=y
 # PTXCONF_IMAGE_UBI is not set
 # PTXCONF_IMAGE_UBIFS is not set
 PTXCONF_IMAGE_UIMAGE=y
 PTXCONF_IMAGE_UIMAGE_NAME="System Ramdisk"
 PTXCONF_IMAGE_UIMAGE_EXTRA_ARGS=""
+PTXCONF_IMAGE_XLBLOB=y
+PTXCONF_IMAGE_XLBLOB_U_BOOT=y
+PTXCONF_IMAGE_XLBLOB_KERNEL=y
 PTXCONF_CROSS_MODULE_INIT_TOOLS=y
 # PTXCONF_HOST_CDRKIT is not set
 # PTXCONF_HOST_CMAKE is not set
@@ -314,13 +222,15 @@ PTXCONF_HOST_GENEXT2FS=y
 # PTXCONF_HOST_LIBBLKID is not set
 # PTXCONF_HOST_LIBBZ2 is not set
 # PTXCONF_HOST_LIBCAP is not set
-# PTXCONF_HOST_LIBLZO is not set
-# PTXCONF_HOST_LIBUUID is not set
+PTXCONF_HOST_LIBLZO=y
+PTXCONF_HOST_LIBUUID=y
 # PTXCONF_HOST_LZOP is not set
 # PTXCONF_HOST_MKELFIMAGE is not set
-# PTXCONF_HOST_MTD_UTILS is not set
-# PTXCONF_HOST_SQUASHFS_TOOLS is not set
+PTXCONF_HOST_MTD_UTILS=y
+# PTXCONF_HOST_OPENSSL is not set
+PTXCONF_HOST_SQUASHFS_TOOLS=y
 PTXCONF_HOST_UMKIMAGE=y
-# PTXCONF_HOST_UTIL_LINUX_NG is not set
+PTXCONF_HOST_UTIL_LINUX_NG=y
+PTXCONF_HOST_XL_TOOLS=y
 # PTXCONF_HOST_XZ is not set
-# PTXCONF_HOST_ZLIB is not set
+PTXCONF_HOST_ZLIB=y
